@@ -62,3 +62,4 @@
 [2025-04-19 22:19:01]	No se encontró una version válida	Solo problemas de colores
 [2025-04-22 07:24:20]	No se encontró una version válida	Borrado de carrito --ok
 [2025-04-22 07:43:53]	No se encontró una version válida	Automatic update
+[2025-04-22 08:00:08]	No se encontró una version válida	Advertencia de `Operacion pendiente`
